--- a/homepage.html
+++ b/homepage.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li><img class="logo" src="logo.png" alt="logo"></li>
-            <li><button class="homebuttons" onclick="location.href='#'">Home</button></li>
-            <li><button class="homebuttons" onclick="location.href='#'">About Us</button></li>
-            <li><button class="homebuttons" onclick="location.href='#'">Contact Us</button></li>
-            <li><button class="homebuttons"><a href="/logout">Logout</a></button></li>
-        </ul>
+        <button class="menu-toggle" id="menu-toggle" onclick="toggleMenu()">
+            <img class="menu-icon" src="menu-icon.png" alt="menu">
+        </button>
+        <div id="menu-items" class="menu-items">
+            <button class="homebuttons" onclick="location.href='#'">Home</button>
+            <button class="homebuttons" onclick="location.href='#'">About Us</button>
+            <button class="homebuttons" onclick="location.href='#'">Contact Us</button>
+            <button class="homebuttons"><a href="/logout">Logout</a></button>
+        </div>
     </header>
 <h2>Welcome, {{email}}</h2>
 <iframe id="pageFrame" src="page1.html" frameborder="0" width="100%" height="600"></iframe>
@@ -28,7 +30,23 @@
 <script>
   function changePage(pageUrl) {
     document.getElementById('pageFrame').src = pageUrl;
-  }
+    }
+  
+        function toggleMenu() {
+            var menuItems = document.getElementById('menu-items');
+            if (menuItems.style.display === 'block') {
+                menuItems.style.display = 'none';
+            } else {
+                menuItems.style.display = 'block';
+            }
+        }
+
+        // Check if the device is a phone before applying the toggleMenu functionality
+        if (window.matchMedia("(max-width: 600px)").matches) {
+            document.getElementById('menu-toggle').style.display = 'block';
+            document.getElementById('menu-items').style.display = 'none';
+        }
+    
 </script>
     <div class="buttonupload">
     <button class="upload" onclick="location.href='#'">Upload</button>
