--- a/homepage.html
+++ b/homepage.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <button class="menu-toggle" id="menu-toggle" onclick="toggleMenu()">
+            <li><img class="logo" src="logo.png" alt="logo"></li>
             <img class="menu-icon" src="menu-icon.png" alt="menu">
         </button>
         <div id="menu-items" class="menu-items">
