--- a/homepage.html
+++ b/homepage.html
@@ -31,15 +31,11 @@
     }
   
     
-        // Check if the device is a phone before applying the toggleMenu functionality
-     //   if (window.matchMedia("(max-width: 600px)").matches) {
-     //       document.getElementById('menu-toggle').style.display = 'block';
-    //      document.getElementById('menu-items').style.display = 'none';
-   //     }
+   
     
 </script>
     <div class="buttonupload">
-    <button class="upload" onclick="location.href='#'">Upload</button>
+    <button class="upload" onclick="location.href='upload.html'">Upload</button>
     </div>  
     <footer></footer>
 </body>
