--- a/upload.html
+++ b/upload.html
@@ -9,6 +9,8 @@
     
     <h1>Upload Item</h1>
     <form action="/itemupload" method="post">
+        <label for="url">Item Image Url:</label><br>
+        <input type="text" id="url" name="url" required><br>
         <label for="name">Item Name:</label><br>
         <input type="text" id="name" name="name" required><br>
         <label for="desc">Description:</label><br>
