--- a/homepage.html
+++ b/homepage.html
@@ -18,22 +18,11 @@
         </ul>
     </header>
 <h2>Welcome, {{email}}</h2>
-<iframe id="pageFrame" src="page1.html" frameborder="0" width="100%" height="600"></iframe>
-    <div class="button-container">
-  <button onclick="changePage('page1.html')">1</button>
-  <button onclick="changePage('page2.html')">2</button>
-  <button onclick="changePage('page3.html')">3</button>
-</div>
+<h5> <button onclick="location.href='./items'">Browse Items</button></li> <h5>
 
-<script>
-  function changePage(pageUrl) {
-    document.getElementById('pageFrame').src = pageUrl;
-    }
-  
-    
+
    
     
-</script>
     <div class="buttonupload">
     <button class="upload" onclick="location.href='upload.html'">Upload</button>
     </div>  
