--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <ul>
-            <li><img class="logo" src="logo.png" alt="logo"></li>
+            <li><img class="logo" src="logo3.png" alt="logo"></li>
             <li><button class="homebuttons" onclick="location.href='#'">Home</button></li>
             <li><button class="homebuttons" onclick="location.href='#'">About Us</button></li>
             <li><button class="homebuttons" onclick="location.href='#'">Contact Us</button></li>
