--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <form action="/login" method="get">
         <label for="email">Email:</label><br>
         <input type="email" id="email" name="email" required><br>
-        <label for="pin">PIN:</label><br>
+        <label for="pin">Password:</label><br>
         <input type="password" id="pin" name="pin" required><br>
         <input type="submit" value="Login">
         
@@ -23,7 +23,7 @@
         <input type="text" id="name" name="name" required><br>
         <label for="email">Email:</label><br>
         <input type="email" id="email" name="email" required><br>
-        <label for="pin">PIN:</label><br>
+        <label for="pin">Password:</label><br>
         <input type="password" id="pin" name="pin" required><br>
         <input type="submit" value="Sign Up">
     </form>
