--- a/login.html
+++ b/login.html
@@ -4,28 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-    <h1>Login</h1>
-    <form action="/login" method="get">
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br>
-        <label for="pin">Password:</label><br>
-        <input type="password" id="pin" name="pin" required><br>
-        <input type="submit" value="Login">
-        
-    </form>
-    <br>
-    <br>
-    <h1>Sign Up</h1>
-    <form action="/signup" method="post">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name" required><br>
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br>
-        <label for="pin">Password:</label><br>
-        <input type="password" id="pin" name="pin" required><br>
-        <input type="submit" value="Sign Up">
-    </form>
+    <div class="container">
+        <h1>Login</h1>
+        <form action="/login" method="get">
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email" required><br>
+            <label for="pin">Password:</label><br>
+            <input type="password" id="pin" name="pin" required><br>
+            <input type="submit" value="Login">
+        </form>
+    </div>
+
+    <div class="container">
+        <h1>Sign Up</h1>
+        <form action="/signup" method="post">
+            <label for="name">Name:</label><br>
+            <input type="text" id="name" name="name" required><br>
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email" required><br>
+            <label for="pin">Password:</label><br>
+            <input type="password" id="pin" name="pin" required><br>
+            <input type="submit" value="Sign Up">
+        </form>
+    </div>
 </body>
 </html>
