--- a/homepage.html
+++ b/homepage.html
@@ -15,7 +15,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#">Logout</a></li>
+            <li><a href="/logout">Logout</a></li>
           </ul>
           <div class="burger">
             <div class="line1"></div>
