--- a/homepage.html
+++ b/homepage.html
@@ -13,8 +13,8 @@
           <img class="logo" src="logo3.png" alt="logo">
           <ul class="nav-links">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="/logout">Logout</a></li>
           </ul>
           <div class="burger">
