--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email" required><br>
             <label for="pin">Password:</label><br>
-            <input type="password" id="pin" name="pin" minlength="5" maxlength="20" required><br>
+            <input type="password" id="pin" name="pin" required><br>
             <input type="submit" value="Login">
         </form>
     </div>
@@ -26,7 +26,7 @@
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email" required><br>
             <label for="pin">Password:</label><br>
-            <input type="password" id="pin" name="pin" minlength="5" maxlength="20" required><br>
+            <input type="password" id="pin" name="pin" required><br>
             <input type="submit" value="Sign Up">
         </form>
     </div>
