--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,26 @@
-<body>under construction ⚠️</body>
+<div class="container" style="background-color: #3498db; color: white; border-radius: 10px; padding: 20px;">
+  <div style="text-align: center;">
+    <h2 style="font-family: Arial, sans-serif; color: #3498db; margin-bottom: 10px;">Contact Us</h2>
+    <p style="font-family: Arial, sans-serif; color: white; margin-bottom: 15px;">Please drop us a note</p>
+  </div>
+  <center>
+    <div class="row">
+      <div class="column" style="display: flex; flex-direction: column; align-items: center;"> </div>
+      <div class="column" style="display: flex; flex-direction: column; align-items: center;"> <form action="mailto:srujanmpadmashali@gmail.com" style="margin-top: 20px;"> <label for="name" style="font-family: Arial, sans-serif; color: white; margin-bottom: 5px;">Your Name</label>
+          <br>
+          <input type="text" id="name" name="Your Name (required)" placeholder="Your name.." style="background-color: #f0f0f0; color: #000; border-radius: 5px; padding: 5px; margin-bottom: 10px;">
+          <br>
+          <label for="email" style="font-family: Arial, sans-serif; color: white; margin-bottom: 5px;">Your email address</label>
+          <br>
+          <input type="text" id="email" name="Your email (required)" placeholder="Your email.." style="background-color: #f0f0f0; color: #000; border-radius: 5px; padding: 5px; margin-bottom: 10px;">
+          <br>
+          <label for="message" style="font-family: Arial, sans-serif; color: white; margin-bottom: 5px;">Message</label>
+          <br>
+          <textarea id="message" name="message" placeholder="Write something.." style="height: 170px; background-color: #f0f0f0; color: #000; border-radius: 5px; padding: 5px; margin-bottom: 10px;"></textarea>
+          <br>
+          <input type="submit" value="Submit" style="background-color: #3498db; color: white; border-radius: 5px; padding: 5px;">
+        </form>
+      </div>
+    </div>
+  </center>
+</div>
