--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="container">
-          <img class="logo" src="logo3.png" alt="logo">
+          <img class="logo" src="logo.png" alt="logo">
           <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="about.html">About</a></li>
