--- a/login.html
+++ b/login.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7237617952637805"
+     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
