--- a/about.html
+++ b/about.html
@@ -1,1 +1,3 @@
+<head><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7237617952637805"
+     crossorigin="anonymous"></script></head>
 <body>under construction ⚠️</body>
