--- a/homepage.html
+++ b/homepage.html
@@ -35,7 +35,7 @@
         });
         </script>
 <h2>Welcome, {{email}}</h2>
-<h5> <button onclick="location.href='./items'">Browse Items</button></li> <h5>
+<h5> <button onclick="location.href='./items'">Browse Items</button></li> </h5>
 
 
    
@@ -43,6 +43,6 @@
     <div class="buttonupload">
     <button class="upload" onclick="location.href='upload.html'">Upload</button>
     </div>  
-    <footer></footer>
+    <footer style="position: absolute;padding-left: 0px;width:100%;height: fit-content;bottom: 0px;"><button><a href="https://docs.google.com/forms/d/e/1FAIpQLSchBtLo4qFeNV62gS9bMRQxlrzERm2B6ggdQorPqphkB1_PJg/viewform?vc=0&c=0&w=1&flr=0" style="text-decoration: none;">Click for Feedback</a></button></footer>
 </body>
 </html>
