--- a/homepage.html
+++ b/homepage.html
@@ -43,6 +43,6 @@
     <div class="buttonupload">
     <button class="upload" onclick="location.href='upload.html'">Upload</button>
     </div>  
-    <footer style="position: absolute;padding-left: 0px;width:100%;height: fit-content;bottom: 0px;"><button><a href="https://docs.google.com/forms/d/e/1FAIpQLSchBtLo4qFeNV62gS9bMRQxlrzERm2B6ggdQorPqphkB1_PJg/viewform?vc=0&c=0&w=1&flr=0" style="text-decoration: none;">Click for Feedback</a></button></footer>
+   <footer style="margin-left:4.5vw;position: absolute;padding: 10px;width: 90vw;height: fit-content;bottom: 0px;"><button><a href="https://docs.google.com/forms/d/e/1FAIpQLSchBtLo4qFeNV62gS9bMRQxlrzERm2B6ggdQorPqphkB1_PJg/viewform?vc=0&c=0&w=1&flr=0" style="text-decoration: none;">Click for Feedback</a></button></footer>
 </body>
 </html>
