--- a/about.html
+++ b/about.html
@@ -1,3 +1,66 @@
-<head><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7237617952637805"
-     crossorigin="anonymous"></script></head>
-<body>under construction ⚠️</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7237617952637805"
+     crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="home_styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact-Us</title>
+    <style>.contain{font-size: 30px;display: flex;
+      justify-content: space-between;
+      align-items: center;margin:200px; margin-top: 50px;margin-right: 200px;   
+      @media screen and (max-width: 768px) {
+        display:block;margin:10px;
+      }}button{
+    width:100px;
+    padding: 10px 20px;
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+input,textarea{
+  width:50vw;
+}
+.aboutabout{
+     padding:30px;
+}
+</style>
+
+</head>
+<body>
+  <nav class="navbar">
+    <div class="container">
+      <img class="logo" src="logo.png" alt="logo">
+      <ul class="nav-links">
+        <li><a href="homepage.html?email=User">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/logout">Logout</a></li>
+      </ul>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </div>
+  </nav>
+
+  <script>const burger = document.querySelector('.burger');
+    const navLinks = document.querySelector('.nav-links');
+    
+    burger.addEventListener('click', () => {
+      navLinks.classList.toggle('active');
+    });
+    </script>
+<div class="aboutabout"><h1>About Us</h1></div>
+
+</body>
+</html>
