--- a/about.html
+++ b/about.html
@@ -32,6 +32,43 @@ input,textarea{
 .aboutabout{
      padding:30px;
 }
+body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+        }
+
+        #container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        p {
+            margin-bottom: 20px;
+            line-height: 1.6;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+
+        li::before {
+            content: "•";
+            color: #007bff;
+            display: inline-block;
+            width: 1em;
+            margin-left: -1em;
+        }
 </style>
 
 </head>
@@ -61,6 +98,18 @@ input,textarea{
     });
     </script>
 <div class="aboutabout"><h1>About Us</h1></div>
-
+<br>
+<div id="container">
+        <p>We at team Reusemart aim to create a user-friendly platform for the efficient exchange of recyclable or reusable supplies absolutely free of cost. We believe that sustainability is key to preserving natural resources and the reuse of worthy materials will reduce the carbon footprints caused by the manufacturing of new products or inefficient disposal of used products.</p>
+        
+        <ul>
+            <li>Srujan M Padmashali (Frontend and backend)</li>
+            <li>Sumukha Rao H (Frontend and Backend)</li>
+            <li>Suvidha S Shetty (Frontend)</li>
+            <li>Srinidhi D S (Frontend)</li>
+            <li>Stiram Raj (Frontend)</li>
+            <li>Sumanth S (Frontend)</li>
+        </ul>
+</div>
 </body>
 </html>
